update the note

--- a/app/views/homePage.scala.html
+++ b/app/views/homePage.scala.html
@@ -2,7 +2,7 @@
 the rendering of the page header and body tags. It takes * two arguments, a
 `String` for the title of the page and an `Html` * object to insert into the
 body of the page. *@ @(title: String)(content: Html)
-
+@routes.Assets.versioned("an_asset")
 <!DOCTYPE html>
 <html lang="en">
 <head >
