--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,13 +1,13 @@
 @* * This template is called from the `index` template. This template * handles
 the rendering of the page header and body tags. It takes * two arguments, a
 `String` for the title of the page and an `Html` * object to insert into the
-body of the page. *@ @(title: String)(content: Html)
+body of the page. *@  @(User_note_data_list: java.util.List[models.User_Data])(content: Html)
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
 @* Here's where we render the page title `String`. *@
-<title>@title</title>
+<title>title</title>
 
 <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
 <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
@@ -20,189 +20,202 @@ body of the page. *@ @(title: String)(content: Html)
 
 <!-- Add application js and css files here-->
 <script src="@routes.Assets.versioned("javascripts/script.js")" type="text/javascript"></script>
-<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/user_data.css")">
 
 
 </head>
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-md-12">
-			<div class="row">
-				<div class="col-md-12">
-					<nav class="navbar navbar-default navbar-inverse navbar-static-top" role="navigation">
-						<div class="navbar-header">
-							 
-							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-								 <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-							</button> <a class="navbar-brand" href="#">Brand</a>
-						</div>
-						
-						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-							<ul class="nav navbar-nav">
-								<li class="active">
-									<a href="#">Link</a>
-								</li>
-								<li>
-									<a href="#">Link</a>
-								</li>
-								<li class="dropdown">
-									 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<strong class="caret"></strong></a>
-									<ul class="dropdown-menu">
-										<li>
-											<a href="#">Action</a>
-										</li>
-										<li>
-											<a href="#">Another action</a>
-										</li>
-										<li>
-											<a href="#">Something else here</a>
-										</li>
-										<li class="divider">
-										</li>
-										<li>
-											<a href="#">Separated link</a>
-										</li>
-										<li class="divider">
-										</li>
-										<li>
-											<a href="#">One more separated link</a>
-										</li>
-									</ul>
-								</li>
-							</ul>
-							<form class="navbar-form navbar-left" role="search">
-								<div class="form-group">
-									<input class="form-control" type="text" />
-								</div> 
-								<button type="submit" class="btn btn-default">
-									Submit
-								</button>
-							</form>
-							<ul class="nav navbar-nav navbar-right">
-								<li>
-									<a href="#">Link</a>
-								</li>
-								<li class="dropdown">
-									 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<strong class="caret"></strong></a>
-									<ul class="dropdown-menu">
-										<li>
-											<a href="#">Action</a>
-										</li>
-										<li>
-											<a href="#">Another action</a>
-										</li>
-										<li>
-											<a href="#">Something else here</a>
-										</li>
-										<li class="divider">
-										</li>
-										<li>
-											<a href="#">Separated link</a>
-										</li>
-									</ul>
-								</li>
-							</ul>
-						</div>
-						
-					</nav>
+<body>
+ <div class="container-fluid">
+  <div class="row">
+   <div class="col-md-12">
+    <div class="row">
+     <div class="col-md-12">
+      <nav class="navbar navbar-default navbar-inverse navbar-static-top" role="navigation">
+       <div class="navbar-header">
+
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+         <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Brand</a>
+       </div>
+
+       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+         <li class="active"><a href="#">Link</a></li>
+         <li><a href="#">Link</a></li>
+         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<strong class="caret"></strong></a>
+          <ul class="dropdown-menu">
+           <li><a href="#">Action</a></li>
+           <li><a href="#">Another action</a></li>
+           <li><a href="#">Something else here</a></li>
+           <li class="divider"></li>
+           <li><a href="#">Separated link</a></li>
+           <li class="divider"></li>
+           <li><a href="#">One more separated link</a></li>
+          </ul></li>
+        </ul>
+        <form class="navbar-form navbar-left" role="search">
+         <div class="form-group">
+          <input class="form-control" type="text" />
+         </div>
+         <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+        <ul class="nav navbar-nav navbar-right">
+         <li><a href="#">Link</a></li>
+         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<strong class="caret"></strong></a>
+          <ul class="dropdown-menu">
+           <li><a href="#">Action</a></li>
+           <li><a href="#">Another action</a></li>
+           <li><a href="#">Something else here</a></li>
+           <li class="divider"></li>
+           <li><a href="#">Separated link</a></li>
+          </ul></li>
+        </ul>
+       </div>
+
+      </nav>
+     </div>
+    </div>
+    <div class="row">
+     <div class="col-md-4"><div class="col-md-8">
+        <a id="modal-261773" href="#modal-container-261773" role="button" class="btn" data-toggle="modal"></a>
+
+        <div class="modal fade" id="modal-container-261773" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+         <div class="modal-dialog">
+          <div class="modal-content">
+           <div class="modal-header">
+            <input type="hidden" name="note_id" value="">
+            <div class="col-md-12 column ui-sortable">
+             <div class="input-group">
+              <input type="text" aria-describedby="basic-addon1" placeholder="Title" class="form-control" id="note_title">
+             </div>
+            </div>
+            <div class="modal-body">
+             <div class="form-group">
+              <textarea class="form-control" placeholder="Description" rows="5" id="note_description"></textarea>
+             </div>
+            </div>
+            <div class="modal-footer">
+             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+             <button type="button" class="btn btn-primary" id="update_note">Save</button>
+            </div>
+           </div>
+
+          </div>
+         </div>
+
+        </div>
+       </div></div>
+     <div class="col-md-8">
+      <div class="row">
+       <div class="col-md-8">
+        <a id="modal-261772" href="#modal-container-261772" role="button" class="btn" data-toggle="modal"></a>
+
+        <div class="modal fade" id="modal-container-261772" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+         <div class="modal-dialog">
+          <div class="modal-content">
+           <div class="modal-header">
+            <div class="col-md-12 column ui-sortable">
+             <div class="input-group">
+              <input type="text" aria-describedby="basic-addon1" placeholder="Title" class="form-control" id="note_title">
+             </div>
+            </div>
+            <div class="modal-body">
+             <div class="form-group">
+              <textarea class="form-control" placeholder="Description" rows="5" id="note_description"></textarea>
+             </div>
+            </div>
+            <div class="modal-footer">
+             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+             <button type="button" class="btn btn-primary" id="note_submit">Savvvvvvve</button>
+            </div>
+           </div>
+
+          </div>
+         </div>
+
+        </div>
+
+        <div id="add_note">
+         <h2>Take a note...</h2>
+        </div>
+
+       </div>
+       <div class="col-md-4"></div>
+      </div>
+     </div>
+    </div>
+    <div class="row">
+     <div class="col-md-4"></div>
+     <div class="col-md-8">
+      <div class="row parent_note">
+       @import java.lang.Long; var k=1L;
+       <!--  for loop to print user data -->
+     @for(index <- 0 until User_note_data_list.size){
+
+	@{k= User_note_data_list(index).note_id }
+	<div class="note_class" id= "@k">
+								<h2>@User_note_data_list(index).title</h2>
+								<p>
+				@User_note_data_list(index).description
+			</p>
+				<div class="col-md-3">
+					<img  src="@routes.Assets.at("images/reminder_logo1.gif")" height="20" width="20" />
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-4">
+					<div class="col-md-3"></div>
+				<div class="col-md-3">
+				    <img  src="@routes.Assets.at("images/images3.jpeg")" height="20" width="20" />
 				</div>
-				<div class="col-md-8">
-					<div class="row">
-						<div class="col-md-8">
-							 <a id="modal-261772" href="#modal-container-261772" role="button" class="btn" data-toggle="modal"></a>
-							
-							<div class="modal fade" id="modal-container-261772" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-								<div class="modal-dialog">
-									<div class="modal-content">
-										<div class="modal-header">
-											 
-											<div class="col-md-12 column ui-sortable">
-											<div class="input-group">
-  
-                      <input type="text" aria-describedby="basic-addon1" placeholder="Title" class="form-control" id="title">
-                      </div>
-                      </div>
-                    
-										<div class="modal-body">
-										 <div class="form-group">
-  
-  <textarea class="form-control" placeholder="Description" rows="5" id="description"></textarea>
-</div>
-										</div>
-										<div class="modal-footer">
-											 
-											<button type="button" class="btn btn-default" data-dismiss="modal">
-												Close
-											</button> 
-											<button type="button" class="btn btn-primary" >
-												Save 
-											</button>
-										</div>
-									</div>
-									
-								</div></div>
-								
-							</div>
-							
-							<div id="add_note">
-							<h2>
-							Take a note...
-							</h2>
-						</div>
-						
-						</div>
-						<div class="col-md-4">
-						</div>
+				 
+					<div class="col-md-3 delete_logo" >
+					    <img  src="@routes.Assets.at("images/delete_logo.gif")" height="20" width="20" />
 					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-4">
-				</div>
-				<div class="col-md-8">
-					<div class="row">
-						<div class="col-md-4">
-							<h2>
-								Heading
-							</h2>
-							<p>
-								Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-							</p>
-							<p>
-								<a class="btn" href="#">View details »</a>
-							</p>
-						</div>
-						<div class="col-md-4">
-							<h2>
-								Heading
-							</h2>
-							<p>
-								Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-							</p>
-							<p>
-								<a class="btn" href="#">View details »</a>
-							</p>
-						</div>
-						<div class="col-md-4">
-							<h2>
-								Heading
-							</h2>
-							<p>
-								Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-							</p>
-							<p>
-								<a class="btn" href="#">View details »</a>
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+							
 	</div>
-</div>
+	
+	<!--/////////////////////-->
+
+}
+        
+        
+        <!--  for loop ending -->
+    
+    <!--  for reminder clock -->
+    
+   
+<!--   <div class="container" id="date_time_box">-->
+<!--    <div class="row">-->
+<!--        <div class='col-sm-6'>-->
+<!--            <div class="form-group">-->
+<!--                <div class='input-group date' id='datetimepicker1'>-->
+<!--                    <input type='text' class="form-control" />-->
+<!--                    <span class="input-group-addon">-->
+<!--                        <span class="glyphicon glyphicon-calendar"></span>-->
+<!--                    </span>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <script type="text/javascript">-->
+<!--            $(function () {-->
+<!--                $('#datetimepicker1').datetimepicker();-->
+<!--            });-->
+<!--        </script>-->
+<!--    </div>-->
+<!--</div>-->
+
+
+<!--    end for reminder clock   -->
+  
+    
+    
+        
+                      
+          
+      </div>
+     </div>
+    </div>
+   </div>
+  </div>
+ </div>
 </body>
 </html>
