--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -24,7 +24,7 @@ body of the page. *@  @(User_note_data_list: java.util.List[models.User_Data])(c
 
 
 </head>
-<body>
+<body  style="background-color: #e0e0e0;">
  <div class="container-fluid">
   <div class="row">
    <div class="col-md-12">
@@ -175,21 +175,21 @@ body of the page. *@  @(User_note_data_list: java.util.List[models.User_Data])(c
 
 	@{k= User_note_data_list(index).note_id }
 	<div class="note_class" id= "@k">
-								<div id="note_title">@Html(User_note_data_list(index).title)</div>
-								<div id="note_description">
+								<div  class="on_click_note" style="font-weight:bold;  margin: 15px 0px 10px 0px; font-size:25px;" id="note_title">@Html(User_note_data_list(index).title)</div>
+								<div  class="on_click_note" id="note_description" style="font-size:17px;">
 				@Html(User_note_data_list(index).description)
 			</div>
 				<div class="col-md-3">
 					<img  src="@routes.Assets.at("images/reminder_logo1.gif")" height="20" width="20" />
 				</div>
-					<div class="col-md-3"></div>
-				<div class="col-md-3">
+				<div class="col-md-3 archive_logo" id="@k">
 				    <img  src="@routes.Assets.at("images/images3.jpeg")" height="20" width="20" />
 				</div>
 				 
 					<div class="col-md-3 delete_logo" id="@k" >
 					    <img  src="@routes.Assets.at("images/delete_logo.gif")" height="20" width="20" />
 					</div>
+					<div class="col-md-3"></div>
 							
 	</div>
 	
