--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -21,6 +21,7 @@ body of the page. *@  @(User_note_data_list: java.util.List[models.User_Data])(c
 <!-- Add application js and css files here-->
 <script src="@routes.Assets.versioned("javascripts/script.js")" type="text/javascript"></script>
 <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/user_data.css")">
+<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/login_style.css")">
 
 
 </head>
@@ -166,7 +167,19 @@ body of the page. *@  @(User_note_data_list: java.util.List[models.User_Data])(c
      </div>
     </div>
     <div class="row">
-     <div class="col-md-4"></div>
+     <div class="col-md-4">
+         
+   <button class="btn btn-default home_button" type="button">
+     <span aria-hidden="true" class="glyphicon glyphicon-home"></span>
+     <span>Home</span> 
+   </button>
+  <br> <button class="btn btn-default archive_button" type="button">
+   <span aria-hidden="true" class="glyphicon glyphicon-inbox"></span>
+  <span>Archive</span>
+   </button>
+</br>
+ 
+     </div>
      <div class="col-md-8">
       <div class="row parent_note">
        @import java.lang.Long; var k=1L;
@@ -180,14 +193,16 @@ body of the page. *@  @(User_note_data_list: java.util.List[models.User_Data])(c
 				@Html(User_note_data_list(index).description)
 			</div>
 				<div class="col-md-3">
-					<img  src="@routes.Assets.at("images/reminder_logo1.gif")" height="20" width="20" />
+				
+				 <span aria-hidden="true" class="glyphicon glyphicon-time"></span> 
 				</div>
 				<div class="col-md-3 archive_logo" id="@k">
-				    <img  src="@routes.Assets.at("images/images3.jpeg")" height="20" width="20" />
+				
+				   <span aria-hidden="true" class="glyphicon glyphicon-cloud-download"></span> 
 				</div>
 				 
 					<div class="col-md-3 delete_logo" id="@k" >
-					    <img  src="@routes.Assets.at("images/delete_logo.gif")" height="20" width="20" />
+					     <span aria-hidden="true" class="glyphicon glyphicon-trash"></span> 
 					</div>
 					<div class="col-md-3"></div>
 							
@@ -202,26 +217,24 @@ body of the page. *@  @(User_note_data_list: java.util.List[models.User_Data])(c
     
     <!--  for reminder clock -->
     
-   
-<!--   <div class="container" id="date_time_box">-->
-<!--    <div class="row">-->
-<!--        <div class='col-sm-6'>-->
-<!--            <div class="form-group">-->
-<!--                <div class='input-group date' id='datetimepicker1'>-->
-<!--                    <input type='text' class="form-control" />-->
-<!--                    <span class="input-group-addon">-->
-<!--                        <span class="glyphicon glyphicon-calendar"></span>-->
-<!--                    </span>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <script type="text/javascript">-->
-<!--            $(function () {-->
-<!--                $('#datetimepicker1').datetimepicker();-->
-<!--            });-->
-<!--        </script>-->
-<!--    </div>-->
-<!--</div>-->
+<div style="overflow:hidden;">
+    <div class="form-group">
+        <div class="row">
+            <div class="col-md-8">
+                <div id="datetimepicker12"></div>
+            </div>
+        </div>
+    </div>
+    <script type="text/javascript">
+        $(function () {
+            $('#datetimepicker12').datetimepicker({
+                inline: true,
+                sideBySide: true
+            });
+        });
+    </script>
+</div>
+
 
 
 <!--    end for reminder clock   -->
