--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -30,51 +30,16 @@ body of the page. *@  @(User_note_data_list: java.util.List[models.User_Data])(c
   <div class="row">
    <div class="col-md-12">
     <div class="row">
-     <div class="col-md-12">
-      <nav class="navbar navbar-default navbar-inverse navbar-static-top" role="navigation">
-       <div class="navbar-header">
-
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-         <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Brand</a>
+     <div class="col-md-12 note_page_title">
+       <div class="container-fluid">
+    <div class="navbar-header">
+      <div class="zemoso_tag"><h3> Zemoso Notes </h3></div>
+      <div class="pic">
+            <img width="42" height="42" class="ui" src="/assets/images/Notes2.png">
        </div>
-
-       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-         <li class="active"><a href="#">Link</a></li>
-         <li><a href="#">Link</a></li>
-         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<strong class="caret"></strong></a>
-          <ul class="dropdown-menu">
-           <li><a href="#">Action</a></li>
-           <li><a href="#">Another action</a></li>
-           <li><a href="#">Something else here</a></li>
-           <li class="divider"></li>
-           <li><a href="#">Separated link</a></li>
-           <li class="divider"></li>
-           <li><a href="#">One more separated link</a></li>
-          </ul></li>
-        </ul>
-        <form class="navbar-form navbar-left" role="search">
-         <div class="form-group">
-          <input class="form-control" type="text" />
-         </div>
-         <button type="submit" class="btn btn-default">Submit</button>
-        </form>
-        <ul class="nav navbar-nav navbar-right">
-         <li><a href="#">Link</a></li>
-         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<strong class="caret"></strong></a>
-          <ul class="dropdown-menu">
-           <li><a href="#">Action</a></li>
-           <li><a href="#">Another action</a></li>
-           <li><a href="#">Something else here</a></li>
-           <li class="divider"></li>
-           <li><a href="#">Separated link</a></li>
-          </ul></li>
-        </ul>
-       </div>
-
-      </nav>
+        <div class="zemoso_pic"> <img width="42" height="42" class="ui" src="/assets/images/zemoso_image.gif"> </div>
+    </div>
+    </div>
      </div>
     </div>
     <div class="row">
@@ -187,11 +152,16 @@ body of the page. *@  @(User_note_data_list: java.util.List[models.User_Data])(c
      @for(index <- 0 until User_note_data_list.size){
 
 	@{k= User_note_data_list(index).note_id }
-	<div class="note_class" id= "@k">
-								<div  class="on_click_note" style="font-weight:bold;  margin: 15px 0px 10px 0px; font-size:25px;" id="note_title">@Html(User_note_data_list(index).title)</div>
-								<div  class="on_click_note" id="note_description" style="font-size:17px;">
+	<div class="note_class note_@k" style="box-shadow: 0px 10px 18px -2px rgba(0,0,0,0.75); "id= "@k">
+	<div class="on_click_note" id= "@k" >
+								<div   style="font-weight:bold;  margin: 15px 0px 10px 0px; font-size:25px;" id="note_title"> @Html(User_note_data_list(index).title)
+								    
+								</div>
+								<div   id="note_description" style="font-size:17px;">
 				@Html(User_note_data_list(index).description)
 			</div>
+			</div>
+			<div class="note_footer">
 				<div class="col-md-3">
 				
 				 <span aria-hidden="true" class="glyphicon glyphicon-time"></span> 
@@ -206,6 +176,7 @@ body of the page. *@  @(User_note_data_list: java.util.List[models.User_Data])(c
 					</div>
 					<div class="col-md-3"></div>
 							
+	</div>
 	</div>
 	
 	<!--/////////////////////-->
