--- a/public/stylesheets/user_data.css
+++ b/public/stylesheets/user_data.css
@@ -16,14 +16,20 @@ nav {
    margin-top:10px;
 }
 
+.note_footer
+{
+    margin:10px 0px 15px 0px;
+    padding-bottom:10px;
+}
 
 .button {
      margin-left: 900px;
   	margin-top:-30px;
 }
 
-.navbar {
+.note_page_title {
     background-color: #ffbb00;
+    height: 80px;
 }
 .zemoso_tag {
      margin-left: 50px;
@@ -40,7 +46,7 @@ nav {
 
 .note_class {
     background-color: white;
-    border: 6px #e0e0e0 solid;
+    border:  #e0e0e0 
     display:inline-block;
     word-wrap:break-word;
     min-height: 1px;
@@ -50,6 +56,7 @@ nav {
     float: left;
     width: 33.3333%;
     display: inline-block;
+    margin: 5px 5px 5px 5px;
   
     
 }
