--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -11,7 +11,7 @@ body of the page. *@  @(User_note_data_list: java.util.List[models.User_Data])(c
 <title>title</title>
 
 <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-<script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
+
 
 <!-- Import jquery , bootstrap and other libraries -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
@@ -24,7 +24,7 @@ body of the page. *@  @(User_note_data_list: java.util.List[models.User_Data])(c
 <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/user_data.css")">
 <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/login_style.css")">
 
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+<!--<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>-->
 
 
 </head>
@@ -125,7 +125,7 @@ body of the page. *@  @(User_note_data_list: java.util.List[models.User_Data])(c
 
         </div>
 
-        <div   ng-app="add_note" ng-controller="on_add_note_click" ng-click="myFunc()">
+        <div     id="add_note" ng-controller="on_add_note_click" ng-click="myFunc()">
          <h2>Take a note...</h2>
         </div>
 
